Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/PKI_Order_Sites__c.field-meta.xml
<CustomField>
    <fullName>PKI_Order_Sites__c</fullName>
    <description>Used to hold site information such as commitment dates.</description>
    <label>PKI Order Sites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>