Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Address_Country__c</fullName>
    <description>mapped from: ReplacementAddressCountry</description>
    <label>Replacement Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>