Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Address_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Address_Geocode__c</fullName>
    <description>mapped from: ReplacementAddressLatitude &amp; ReplacementAddressLongitude</description>
    <label>Replacement Address Geocode</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>