Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Address_Postal_Code__c</fullName>
    <description>mapped from: ReplacementAddressPostalCode</description>
    <label>Replacement Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>