Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Address_Region__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Address_Region__c</fullName>
    <description>mapped from: ReplacementAddressRegion</description>
    <label>Replacement Address Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>