Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Address_Street__c</fullName>
    <description>mapped from: ReplacementAddressStreet1</description>
    <label>Replacement Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>