Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Attention__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Attention__c</fullName>
    <description>mapped from: ReplacementAttention</description>
    <label>Replacement Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>