Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Customer_Id__c</fullName>
    <description>mapped from: ReplacementCustomerId</description>
    <label>Replacement Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>