Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Replacement_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Replacement_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapped using the Replacement to Customer Id and an L.FLOW</description>
    <label>Replacement to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PKI Order Summary (Replacement to Customer)</relationshipLabel>
    <relationshipName>PKI_Order_Summary3</relationshipName>
    <type>Lookup</type>
</CustomField>