Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Sales_Rep_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Last_Name__c</fullName>
    <label>Sales Rep Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>