Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <label>Sales Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>