Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Ship_To_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Country__c</fullName>
    <label>Ship To Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>