Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Ship_To_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Postal_Code__c</fullName>
    <label>Ship To Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>