Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Ship_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapped using the Ship to Customer Id and an L.FLOW</description>
    <label>Ship To Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PKI Order Summary (Ship To Customer)</relationshipLabel>
    <relationshipName>PKI_Order_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>