Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Sold_To_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Customer_Id__c</fullName>
    <label>Sold To Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>