Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Special_Handling_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Instructions__c</fullName>
    <description>mapped from; orderSpecialHandlingInstructions</description>
    <label>Special Handling Instructions</label>
    <type>TextArea</type>
</CustomField>