Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Ultimate_Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Destination_Country__c</fullName>
    <label>Ultimate Destination Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>