Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Order_Path__c</columns>
    <columns>fxBlockedBy__c</columns>
    <columns>Order_Net_Value__c</columns>
    <columns>Order_Net_Currency__c</columns>
    <columns>Actual_Order_Date__c</columns>
    <columns>fxRevRecDate__c</columns>
    <columns>Current_Global_Delivery_Date__c</columns>
    <columns>Current_CER_date__c</columns>
    <columns>Actual_Customer_Date__c</columns>
    <columns>Customer_Accept_Date__c</columns>
    <columns>Opp_Owner__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>sales_Rep_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Path__c</field>
        <operation>notEqual</operation>
        <value>Order Shipped</value>
    </filters>
    <filters>
        <field>fxOrder_Is_Rejected__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Order_Net_Value__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>fxCOVIDItems__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sold_To_Address_Country__c</field>
        <operation>equals</operation>
        <value>US,CAN</value>
    </filters>
    <label>All PKI Orders (Not Shipped)</label>
</ListView>