Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/listViews/All_PKI_Orders_Blocked.listView-meta.xml
<ListView>
    <fullName>All_PKI_Orders_Blocked</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Order_Path__c</columns>
    <columns>fxBlockedBy__c</columns>
    <columns>Order_Net_Value__c</columns>
    <columns>Actual_Order_Date__c</columns>
    <columns>Current_Global_Delivery_Date__c</columns>
    <columns>Current_CER_date__c</columns>
    <columns>Actual_Customer_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>sales_Rep_Email__c</columns>
    <columns>Count_of_Items__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fxBlockedType__c</field>
        <operation>contains</operation>
        <value>y</value>
    </filters>
    <filters>
        <field>fxOrder_Is_Rejected__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>fxCOVIDItems__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2023 12:00 AM</value>
    </filters>
    <label>All PKI Orders (Blocked)</label>
</ListView>