Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/listViews/All_PKI_Orders_By_Sales_Rep.listView-meta.xml
<ListView>
    <fullName>All_PKI_Orders_By_Sales_Rep</fullName>
    <columns>Sales_Rep_First_Name__c</columns>
    <columns>Opp_Owner__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Net_Value__c</columns>
    <columns>Actual_CER_date__c</columns>
    <columns>fxRevRecDate__c</columns>
    <columns>Sold_To_Customer_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order_Path__c</columns>
    <columns>Actual_Order_Date__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>fxBlockedBy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fxOrder_Is_Rejected__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Rep_First_Name__c</field>
        <operation>contains</operation>
        <value>birgit</value>
    </filters>
    <filters>
        <field>Order_Total_Price__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All PKI Orders - By Sales Rep</label>
</ListView>