Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/listViews/All_PKI_Orders_Not_Shipped_No_Opty.listView-meta.xml
<ListView>
    <fullName>All_PKI_Orders_Not_Shipped_No_Opty</fullName>
    <columns>Sales_Rep_First_Name__c</columns>
    <columns>Order_Path__c</columns>
    <columns>NAME</columns>
    <columns>Sold_To_Customer_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order_Net_Value__c</columns>
    <columns>fxBlockedBy__c</columns>
    <columns>Actual_Order_Date__c</columns>
    <columns>fxRevRecDate__c</columns>
    <columns>Current_Global_Delivery_Date__c</columns>
    <columns>Current_CER_date__c</columns>
    <columns>Actual_Customer_Date__c</columns>
    <columns>Customer_Accept_Date__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fxOrder_Is_Rejected__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Order_Net_Value__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sold_To_Address_Country__c</field>
        <operation>equals</operation>
        <value>US,CAN</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Order_Net_Value__c</field>
        <operation>greaterOrEqual</operation>
        <value>25000</value>
    </filters>
    <filters>
        <field>Sales_Rep_First_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Actual_Order_Date__c</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <filters>
        <field>Actual_CER_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>All PKI Orders (Not Shipped) - No Opty</label>
</ListView>