Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/listViews/All_PKI_Orders_Recently_Updated.listView-meta.xml
<ListView>
    <fullName>All_PKI_Orders_Recently_Updated</fullName>
    <columns>NAME</columns>
    <columns>Owned_by_Company__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>Order_Path__c</columns>
    <columns>fxBlockedBy__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Order_Net_Value__c</columns>
    <columns>Actual_Order_Date__c</columns>
    <columns>Current_Global_Delivery_Date__c</columns>
    <columns>Current_CER_date__c</columns>
    <columns>Count_of_Items__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <label>All PKI Orders (Recently Updated)</label>
</ListView>